# torchtest

./: .gitignore  CMakeLists.txt  label.txt  main.cpp  main.hpp
